--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <LinearLayout
+          <LinearLayout
                 android:layout_marginTop="180dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -23,76 +23,115 @@
 
 
 
-        <EditText
-            android:id="@+id/registerlName"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:background="@drawable/edit_text_background"
-            android:hint="Full name"
-            android:paddingLeft="30dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="20dp"
-            />
+              <soup.neumorphism.NeumorphCardView
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="center"
+                  android:layout_marginTop="10dp"
+                  android:layout_marginBottom="15dp"
+                  app:neumorph_shapeType="pressed">
+                <EditText
+                    android:id="@+id/registerlName"
+                    android:layout_width="300dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/edit_text_creadential"
+                    android:hint="Full name"
+                    android:paddingLeft="30dp"/>
+              </soup.neumorphism.NeumorphCardView>
 
-            <EditText
+
+
+            <soup.neumorphism.NeumorphCardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="15dp"
+                    app:neumorph_shapeType="pressed">
+                <EditText
                 android:id="@+id/registerEmail"
                 android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:background="@drawable/edit_text_background"
+                android:layout_height="50dp"
+                android:background="@drawable/edit_text_creadential"
                 android:hint="Email"
                 android:paddingLeft="30dp"
-                android:layout_marginTop="10dp"
-                android:inputType="textEmailAddress"
-                android:layout_marginStart="50dp"
-                android:layout_marginEnd="30dp"/>
+                android:inputType="textEmailAddress"/>
+             </soup.neumorphism.NeumorphCardView>
 
-            <EditText
-                android:id="@+id/registerAddress"
-                android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:background="@drawable/edit_text_background"
-                android:hint="Address"
-                android:paddingLeft="30dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="50dp"
-                android:layout_marginEnd="30dp"/>
 
-            <EditText
+            <soup.neumorphism.NeumorphCardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="15dp"
+                    app:neumorph_shapeType="pressed">
+                <EditText
+                    android:id="@+id/registerAddress"
+                    android:layout_width="300dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/edit_text_creadential"
+                    android:hint="Address"
+                    android:paddingLeft="30dp"/>
+             </soup.neumorphism.NeumorphCardView>
+
+
+            <soup.neumorphism.NeumorphCardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="15dp"
+                    app:neumorph_shapeType="pressed">
+                <EditText
                 android:id="@+id/registerPhone"
-                android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:background="@drawable/edit_text_background"
+                    android:layout_width="300dp"
+                    android:layout_height="50dp"
+                android:background="@drawable/edit_text_creadential"
                 android:hint="Phone"
                 android:paddingLeft="30dp"
                 android:inputType="phone"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="50dp"
-                android:layout_marginEnd="30dp"/>
+                />
+                </soup.neumorphism.NeumorphCardView>
 
-                <EditText
-                    android:id="@+id/registerPassword"
-                    android:layout_width="300dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/edit_text_background"
-                    android:hint="Password"
-                    android:paddingLeft="30dp"
-                    android:inputType="textVisiblePassword"
+                <soup.neumorphism.NeumorphCardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_marginTop="10dp"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginEnd="30dp"/>
+                    android:layout_marginBottom="15dp"
+                    app:neumorph_shapeType="pressed"
+                    >
+                    <EditText
+                        android:background="@drawable/edit_text_creadential"
+                        android:id="@+id/registerPassword"
+                        android:layout_width="300dp"
+                        android:layout_height="50dp"
+                        android:hint="Password"
+                        android:inputType="textPassword"
+                        android:paddingLeft="30dp" />
+                </soup.neumorphism.NeumorphCardView>
 
-                <androidx.appcompat.widget.AppCompatButton
+
+
+                <soup.neumorphism.NeumorphCardView
                     android:id="@+id/registerBtn"
-                    android:layout_width="200dp"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:neumorph_shadowElevation="@dimen/_3sdp"
+                    app:neumorph_shapeType="flat"
+                    android:layout_marginTop="50dp"
+                    app:neumorph_backgroundColor="@color/gold"
                     android:layout_marginBottom="30dp"
-                    android:text="Register"
-                    android:textStyle="bold"
-                    android:layout_marginStart="100dp"
-                    android:layout_marginEnd="100dp"
-                    />
+                    android:layout_gravity="center">
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="50dp"
+                        android:text="Register"
+                        android:textSize="@dimen/_20sdp"
+                        android:gravity="center"
+                        />
+                </soup.neumorphism.NeumorphCardView>
 
                 <TextView
                     android:id="@+id/goToLogin"
