--- a/app/src/main/res/layout/activity_view_workers.xml
+++ b/app/src/main/res/layout/activity_view_workers.xml
@@ -4,6 +4,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewWorkersActivity">
+    tools:context=".ViewWorkersActivity"
+    android:background="@color/background">
+
+    <RelativeLayout
+        android:id="@+id/header_bg"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_120sdp"
+        android:background="@drawable/header_background"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/titleActivity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Worker list"
+            android:textColor="@color/light_shadow"
+            android:textSize="@dimen/_20sdp"
+            android:textStyle="bold"
+
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginStart="@dimen/_20sdp"
+            />
+
+
+        <soup.neumorphism.NeumorphCardView
+            android:id="@+id/addBtn"
+            android:layout_width="@dimen/_70sdp"
+            android:layout_height="@dimen/_45sdp"
+            app:neumorph_backgroundColor="@color/success"
+            app:layout_constraintVertical_bias="0.085"
+            app:neumorph_shadowElevation="@dimen/_3sdp"
+            android:layout_toRightOf="@+id/titleActivity"
+            android:layout_marginStart="@dimen/_80sdp"
+            android:layout_marginTop="@dimen/_70sdp"
+
+            app:neumorph_shapeType="flat">
+
+            <com.makeramen.roundedimageview.RoundedImageView
+
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_gravity="center"
+
+
+                android:foregroundTint="@color/white"
+
+                android:src="@drawable/ic_baseline_person_add_alt_1_24" />
+        </soup.neumorphism.NeumorphCardView>
+
+
+    </RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_width="391dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/header_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
